--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -30,7 +30,8 @@
                 "ts": "never"
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "class-methods-use-this":"off"
     },
     "settings": {
         "import/resolver": {
