fixed eslint bug and hashing user password

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -32,7 +32,7 @@
             }
         ],
         "prettier/prettier": "error",
-        "class-methods-use-this":"off",
+        "class-methods-use-this":"off"
     },
     "settings": {
         "import/resolver": {
