--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -30,11 +30,12 @@
                 "ts": "never"
             }
         ],
-        "prettier/prettier": "error",
-        "class-methods-use-this":"off",
         "@typescript-eslint/no-unused-vars": ["error", {
             "argsIgnorePattern": "_"
-        }]
+        }],
+        "prettier/prettier": "error",
+        "class-methods-use-this":"off",
+        "@typescript-eslint/camelcase": "off"
 
     },
     "settings": {
