applied dependency inversion principle

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -35,8 +35,8 @@
         }],
         "prettier/prettier": "error",
         "class-methods-use-this":"off",
-        "@typescript-eslint/camelcase": "off"
-
+        "@typescript-eslint/camelcase": "off",
+        "no-useless-constructor": "off"
     },
     "settings": {
         "import/resolver": {
