dependencies injection done

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -6,7 +6,7 @@
     "password": "docker",
     "database": "gostack_gobarber",
     "entities": [
-        "./src/modules/**/infra/typeorm/entities.ts"
+        "./src/modules/**/infra/typeorm/entities/*.ts"
     ],
     "migrations": [
         "./src/shared/infra/typeorm/migrations/*.ts"
