--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
+    "rate-limiter-flexible": "^2.1.10",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
@@ -41,6 +43,7 @@
     "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.25",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "6.8.0",
