--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -37,6 +37,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "no-unused-expressions": "off",
+        "import/no-duplicates": "off",
         "react/jsx-filename-extension": [
             1,
             {
