--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -41,6 +41,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "@typescript-eslint/camelcase": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
