fix: set duplicates off

--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -42,6 +42,7 @@
     ],
     "import/prefer-default-export": "off",
     "@typescript-eslint/camelcase": "off",
+    "import/no-duplicates": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
